--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,7 @@
 name: Deploy to Cloudflare
 
 on:
+  workflow_dispatch:
   workflow_run:
     workflows: ["Publish from Submission"]
     types:
@@ -12,7 +13,7 @@ jobs:
   deploy:
     name: Trigger Cloudflare Pages Deploy
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event_name == 'workflow_dispatch' || github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Trigger deploy hook
         run: |
@@ -23,5 +24,5 @@ jobs:
         run: |
           echo "## Cloudflare Deploy Triggered" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "Triggered by: ${{ github.event.workflow_run.name }}" >> $GITHUB_STEP_SUMMARY
-          echo "Commit: ${{ github.event.workflow_run.head_sha }}" >> $GITHUB_STEP_SUMMARY
+          echo "Triggered by: ${{ github.event_name }}" >> $GITHUB_STEP_SUMMARY
+          echo "Commit: ${{ github.sha }}" >> $GITHUB_STEP_SUMMARY
