feat: link articles to source PR in provenance
- Add pr_number and pr_url fields to ProvenanceData interface
- Capture PR info from workflow context (github.event.pull_request)
- Pass PR info to generation script via environment variables
- Display Source PR link in AuditCard on provenance page

--- a/.github/workflows/publish-from-submission.yml
+++ b/.github/workflows/publish-from-submission.yml
@@ -66,6 +66,8 @@ jobs:
         id: generate
         env:
           GITHUB_RUN_ID: ${{ github.run_id }}
+          GITHUB_PR_NUMBER: ${{ github.event.pull_request.number }}
+          GITHUB_PR_URL: ${{ github.event.pull_request.html_url }}
           PUBLISHER_PRIVATE_KEY: ${{ secrets.PUBLISHER_PRIVATE_KEY }}
           PUBLISHER_SECRET: ${{ secrets.PUBLISHER_SECRET }}
         run: |
