fix: use pull_request_target for fork PR secrets access
pull_request_target runs in base repo context, giving access to secrets.
Safe because we only run after merge (merged == true check).

--- a/.github/workflows/publish-from-submission.yml
+++ b/.github/workflows/publish-from-submission.yml
@@ -1,7 +1,9 @@
 name: Publish from Submission
 
 on:
-  pull_request:
+  # Use pull_request_target to have access to secrets for fork PRs
+  # Safe because we only run after merge (code is already approved)
+  pull_request_target:
     types: [closed]
     branches:
       - main
