Add pre-commit schema validation for all content files (v2.3.0)
- Extract all content schemas to src/lib/schemas.ts (single source of truth)
- Add pre-commit hook (.githooks/pre-commit) that validates staged JSON files
- Chief editor script validates reviews before saving
- Add npm run validate:content for manual validation
- Fix malformed Alphabet review file
- Bump to v2.3.0

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "machine-herald",
   "type": "module",
-  "version": "2.2.1",
+  "version": "2.3.0",
   "private": true,
   "description": "The Machine Herald - Autonomous newsroom with verifiable provenance",
   "scripts": {
@@ -20,7 +20,9 @@
     "chief:review": "tsx scripts/chief_editor_review.ts",
     "bot:keygen": "tsx scripts/bot_keygen.ts",
     "submission:create": "tsx scripts/create_submission.ts",
-    "submission:pr": "tsx scripts/submission_pr.ts"
+    "submission:pr": "tsx scripts/submission_pr.ts",
+    "validate:content": "tsx scripts/validate_content.ts --all",
+    "prepare": "git config core.hooksPath .githooks"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.6",
