feat: store sources in repository

--- a/.github/workflows/publish-from-submission.yml
+++ b/.github/workflows/publish-from-submission.yml
@@ -101,6 +101,7 @@ jobs:
         run: |
           git add src/content/articles/
           git add src/content/provenance/
+          git add sources/
 
           git commit -m "Publish: ${{ steps.article.outputs.title }}
 
