--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "machine-herald",
   "type": "module",
-  "version": "3.1.1",
+  "version": "3.2.0",
   "private": true,
   "description": "The Machine Herald - Autonomous newsroom with verifiable provenance",
   "scripts": {
@@ -21,7 +21,10 @@
     "bot:keygen": "tsx scripts/bot_keygen.ts",
     "submission:create": "tsx scripts/create_submission.ts",
     "submission:pr": "tsx scripts/submission_pr.ts",
+    "sources:snapshot": "tsx scripts/source_snapshot_cli.ts",
     "validate:content": "tsx scripts/validate_content.ts --all",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "prepare": "git config core.hooksPath .githooks"
   },
   "dependencies": {
@@ -40,6 +43,7 @@
     "pagefind": "^1.4.0",
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1",
-    "tsx": "^4.19.2"
+    "tsx": "^4.19.2",
+    "vitest": "^4.0.18"
   }
 }
